// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match the snapshot for a new user 1`] = `
<DocumentFragment>
  <form
    action="#"
  >
    <div
      class="field"
    >
      <label
        class="label"
        for="name"
      >
        Name
      </label>
      <div
        class="control"
      >
        <input
          data-testid="name"
          name="name"
          type="text"
          value=""
        />
      </div>
      <p
        class="help is-danger"
        data-testid="userNameErrors"
      />
    </div>
    <div
      class="field"
    >
      <label
        class="label"
        for="password"
      >
        Password
      </label>
      <div
        class="control"
      >
        <input
          data-testid="password"
          name="password"
          type="password"
          value=""
        />
      </div>
    </div>
    <div
      class="field"
    >
      <label
        class="label"
        for="confirmPassword"
      >
        Confirm Password
      </label>
      <div
        class="control"
      >
        <input
          data-testid="confirmPassword"
          name="confirmPassword"
          type="password"
          value=""
        />
      </div>
    </div>
    <div
      class="field"
    >
      <label
        class="label"
        for="isAdmin"
      >
        Is Admin
      </label>
      <div
        class="control"
      >
        <input
          data-testid="isAdmin"
          name="isAdmin"
          type="checkbox"
          value="false"
        />
      </div>
    </div>
    <div
      class="field is-grouped"
    >
      <p
        class="control"
      >
        <button
          class="button"
          data-testid="submit"
          type="submit"
        >
          CREATE
        </button>
      </p>
      <p
        class="control"
      >
        <button
          class="button"
          data-testid="cancel"
          type="button"
        >
          CANCEL
        </button>
      </p>
    </div>
  </form>
</DocumentFragment>
`;

exports[`should match the snapshot for an existing admin user 1`] = `
<DocumentFragment>
  <form
    action="#"
  >
    <div
      class="field"
    >
      <label
        class="label"
        for="name"
      >
        Name
      </label>
      <div
        class="control"
      >
        <input
          data-testid="name"
          name="name"
          type="text"
          value="user"
        />
      </div>
      <p
        class="help is-danger"
        data-testid="userNameErrors"
      />
    </div>
    <div
      class="field"
    >
      <label
        class="label"
        for="password"
      >
        Password
      </label>
      <div
        class="control"
      >
        <input
          data-testid="password"
          name="password"
          type="password"
          value=""
        />
      </div>
    </div>
    <div
      class="field"
    >
      <label
        class="label"
        for="confirmPassword"
      >
        Confirm Password
      </label>
      <div
        class="control"
      >
        <input
          data-testid="confirmPassword"
          name="confirmPassword"
          type="password"
          value=""
        />
      </div>
    </div>
    <div
      class="field"
    >
      <label
        class="label"
        for="isAdmin"
      >
        Is Admin
      </label>
      <div
        class="control"
      >
        <input
          data-testid="isAdmin"
          name="isAdmin"
          type="checkbox"
          value="true"
        />
      </div>
    </div>
    <div
      class="field is-grouped"
    >
      <p
        class="control"
      >
        <button
          class="button"
          data-testid="submit"
          type="submit"
        >
          UPDATE
        </button>
      </p>
      <p
        class="control"
      >
        <button
          class="button"
          data-testid="cancel"
          type="button"
        >
          CANCEL
        </button>
      </p>
      <p
        class="control"
      >
        <button
          class="button is-danger"
          data-testid="delete"
          type="button"
        >
          DELETE
        </button>
      </p>
    </div>
  </form>
</DocumentFragment>
`;

exports[`should match the snapshot for an existing non admin user 1`] = `
<DocumentFragment>
  <form
    action="#"
  >
    <div
      class="field"
    >
      <label
        class="label"
        for="name"
      >
        Name
      </label>
      <div
        class="control"
      >
        <input
          data-testid="name"
          name="name"
          type="text"
          value="user"
        />
      </div>
      <p
        class="help is-danger"
        data-testid="userNameErrors"
      />
    </div>
    <div
      class="field"
    >
      <label
        class="label"
        for="password"
      >
        Password
      </label>
      <div
        class="control"
      >
        <input
          data-testid="password"
          name="password"
          type="password"
          value=""
        />
      </div>
    </div>
    <div
      class="field"
    >
      <label
        class="label"
        for="confirmPassword"
      >
        Confirm Password
      </label>
      <div
        class="control"
      >
        <input
          data-testid="confirmPassword"
          name="confirmPassword"
          type="password"
          value=""
        />
      </div>
    </div>
    <div
      class="field"
    >
      <label
        class="label"
        for="isAdmin"
      >
        Is Admin
      </label>
      <div
        class="control"
      >
        <input
          data-testid="isAdmin"
          name="isAdmin"
          type="checkbox"
          value="false"
        />
      </div>
    </div>
    <div
      class="field is-grouped"
    >
      <p
        class="control"
      >
        <button
          class="button"
          data-testid="submit"
          type="submit"
        >
          UPDATE
        </button>
      </p>
      <p
        class="control"
      >
        <button
          class="button"
          data-testid="cancel"
          type="button"
        >
          CANCEL
        </button>
      </p>
      <p
        class="control"
      >
        <button
          class="button is-danger"
          data-testid="delete"
          type="button"
        >
          DELETE
        </button>
      </p>
    </div>
  </form>
</DocumentFragment>
`;
